--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "clean": "rm dist/bundle.js",
+    "clean": "rm dist/*",
     "start": "parcel src/index.html",
-    "build-prod": "parcel build src/index.html"
+    "build": "parcel build src/index.html --public-url ./"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
