--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.10",
     "autoprefixer": "^9.0.0",
     "eslint": "^7.22.0",
@@ -21,5 +22,9 @@
     "parcel-bundler": "^1.12.5",
     "postcss-modules": "^4.0.0",
     "prettier": "^2.2.1"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@babel/runtime-corejs3": "^7.13.10"
   }
 }
